--- a/static/steps.html
+++ b/static/steps.html
@@ -33,11 +33,10 @@
         </form>
       </p>
 
-      <ul id="suggestions">
-
-      </ul>
-
     </div>
+
+    <ul id="suggestions" class="content box">
+    </ul>
 
     <div id="map-canvas" class="content hiddenMap">
 
