--- a/static/steps.html
+++ b/static/steps.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="summary" class="content box">
-      <p>
+      <!--<p>
         So far today you have taken
         <span id="actualSteps"></span>
         steps,
@@ -23,7 +23,7 @@
         steps fewer than your goal of
         <span id="goalSteps"></span>
         steps.
-      </p>
+        </p>-->
     </div>
 
     <form action="javascript:getGeoAndSubmit()" class="content box">
@@ -47,10 +47,17 @@
 
   <script src="jquery-1.9.0.js"></script>
   <script src="addTappableJQPlugin.js"></script>
-  <script type="text/javascript"
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtjE9cT2HWJpuf745-cYh7rP_E1CPRE-c&sensor=true"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtjE9cT2HWJpuf745-cYh7rP_E1CPRE-c&sensor=true"></script>
   <script src="gmapVenueDisplay.js"></script>
   <script src="stepFinder.js" type="text/javascript"></script>
+  <script src="handlebars.js"></script>
+
+  <script id="summary-template" type="text/x-handlebars-template">
+    <p>
+      So far today you have taken {{actualSteps}} steps, {{remainingSteps}} steps fewer than your goal of {{goalSteps}}.
+    </p>
+  </script>
+
   <script>
   window.onload = function() {
     $.ajax({
@@ -70,9 +77,19 @@
           localStorage.stepsPerMile = stepsPerMile;
 
           if (localStorage.remainingSteps > 0) {
+            var source = $("#summary-template").html();
+            var template = Handlebars.compile(source);
+            var data = {
+              actualSteps: actualSteps,
+              remainingSteps: localStorage.remainingSteps,
+              goalSteps: goalSteps
+            };
+            $("#summary").html(template(data));
+            /*
             $("#actualSteps").text(actualSteps);
             $("#remainingSteps").text(goalSteps - actualSteps);
             $("#goalSteps").text(goalSteps);
+            */
          } else {
             $("#summary").html("You've achieved your step goal for the day! If you want to push yourself a little further, we'll suggest some venues that will earn you around another 2000 steps.");
           }
