--- a/static/activity.html
+++ b/static/activity.html
@@ -15,15 +15,6 @@
     </div>
 
     <div id="summary" class="content box">
-      <p>
-        You currently have
-        <span id="actualCalories"></span>
-        calories toward your goal of
-        <span id="caloriesGoal"></span>
-        calories today. You have
-        <span id="remainingCalories"></span>
-        calories remaining today.
-      </p>
     </div>
 
     <ul id="suggestions" class="content box">
@@ -40,6 +31,14 @@
 
   <script src="jquery-1.9.0.js"></script>
   <script src="addTappableJQPlugin.js"></script>
+  <script src="handlebars.js"></script>
+  <script id="summary-template" type="text/x-handlebars-template">
+    <p>
+      Your net calories for the day is currently {{actualCalories}}, {{-remainingCalories}} above
+      your goal of {{caloriesGoal}}. Get some exercise in to get closer to your goal?
+    </p>
+  </script>
+
   <script>
   var g = {};
 
@@ -103,15 +102,17 @@
   };
 
   function displayCalorieData() {
-    var cActSpan = $("#actualCalories");
-    var cGoalSpan = $("#caloriesGoal");
-    var cRemSpan = $("#remainingCalories");
-    g.caloriesTarget = g.caloriesGoal - g.actualCalories;
+    g.remainingCalories = g.caloriesGoal - g.actualCalories;
 
-    if (g.caloriesTarget > 0) {
-      cActSpan.html(g.actualCalories);
-      cGoalSpan.html(g.caloriesGoal);
-      cRemSpan.html(g.caloriesTarget);
+    if (g.remainingCalories < 0) {
+      var source = $("#summary-template").html();
+      var template = Handlebars.compile(source);
+      var data = {
+        actualCalories: g.actualCalories,
+        caloriesGoal: g.caloriesGoal,
+        remainingCalories: g.remainingCalories
+      };
+      $("#summary").html(template(data));
     } else {
       $("#summary").html("You've achieved your calorie goal for the day! If you're still feeling up for more, try some of these exercises.");
     }
@@ -121,8 +122,8 @@
     var activitySuggestions = $("#suggestions");
     var newSuggestion;
     var sortedActivities = g.exercises.sort(function(a, b) {
-      var adiff = Math.abs((a.mets * 60) - (- g.caloriesTarget));
-      var bdiff = Math.abs((b.mets * 60) - (- g.caloriesTarget));
+      var adiff = Math.abs((a.mets * 60) - (- g.remainingCalories));
+      var bdiff = Math.abs((b.mets * 60) - (- g.remainingCalories));
       return adiff - bdiff;
     });
 
