--- a/static/signin.html
+++ b/static/signin.html
@@ -12,7 +12,7 @@
   <body>
   <div id="container">
     <div id="header" class="box">
-      <img src="fitbit.png" alt="Fitbit" /> Completer
+      <a id="home" href="/"><img src="fitbit.png" alt="Fitbit" /> Completer</a>
     </div>
 
     <div class="content box">
