--- a/static/calories.html
+++ b/static/calories.html
@@ -11,7 +11,7 @@
 <body>
   <div id="container">
     <div id="header" class="box">
-      <img src="fitbit.png" alt="Fitbit" /> Completer
+      <a id="home" href="/signedin.html"><img src="fitbit.png" alt="Fitbit" /> Completer</a>
     </div>
 
     <div id="summary" class="content box">
