--- a/static/signedin.html
+++ b/static/signedin.html
@@ -12,9 +12,8 @@
   <body>
     <div id="container">
       <div id="header" class="box">
-        <img src="fitbit.png" alt="Fitbit" /> Completer
+        <a id="home" href="/signedin.html"><img src="fitbit.png" alt="Fitbit" /> Completer</a>
       </div>
-
 
       <div class="content box">
         <p>Welcome to Fitbit Completer, where you can easily find ways to complete your Fitbit goals.</p>
