Fixed home page css bug

--- a/static/signedin.html
+++ b/static/signedin.html
@@ -31,22 +31,22 @@
       </div>
 
 
-    <div class="content box">
-      <a href="steps.html" class="content box">
+
+      <a href="steps.html" class="content box block">
         You currently have 
         <span id="remainingSteps"></span>
         steps remaining for your daily goal.
       </a>
-      <a href="calories.html" class="content box">
+      <a href="calories.html" class="content box block">
         You currently have
         <span id="remainingCalories"></span>
         calories remaining for your daily goal.
       </a>
-      <a href="activity.html" class="content box">
+      <a href="activity.html" class="content box block">
         Touch here to find activities to unlock extra calories.
       </a>
-    </div>
 
+<!-- TODO: fix footer scrolling bug -->
     <div id="footer">
       <div id="current-page" class="tab"><a href="signedin.html">Home</a></div>
       <div class="tab"><a href="steps.html">Steps</a></div>
