fixed that fullpage map bug

--- a/static/steps.html
+++ b/static/steps.html
@@ -25,7 +25,7 @@
     <ul id="suggestions" class="content box">
     </ul>
 
-    <div id="map-canvas" class="content hiddenMap">
+    <div id="map-canvas-hidden" class="content hiddenMap">
     </div>
 
     <div id="footer">
