Got activity logging to work!

--- a/static/activity.html
+++ b/static/activity.html
@@ -95,7 +95,7 @@
         accessTokenSecret: localStorage["fitbitCompleter" + "AccessTokenSecret"],
         startTime: startTime,
         duration: duration,
-        activityId: activityId // TODO
+        activityId: activityId
       },
       success: function(response) {
         if (response.success) {
