--- a/static/signedin.html
+++ b/static/signedin.html
@@ -46,10 +46,25 @@
       <div class="tab"><a href="steps.html">Steps</a></div>
       <div class="tab"><a href="calories.html">Calories</a></div>
       <div class="tab"><a href="activity.html">Activity</a></div>
+      <div class="tab" id="logout">Logout</div>
     </div>
 
+  <script id="logout-template" type="text/x-handlebars-template">
+    <div id="overlay" class="box">
+      Do you really want to logout?
+      <form action="" id="logout-form">
+        <button type="submit" formaction="javascript:logout()">Yes</button>
+        <button type="submit" formaction="javascript:closeLogoutPopup()">No</button>
+      </form>
+
+      <div id="close-overlay">X</div>
+    </div>
+  </script>
 
   <script src="jquery-1.9.0.js"></script>
+  <script src="addTappableJQPlugin.js"></script>
+  <script src="handlebars.js"></script>
+  <script src="initializationCode.js"></script>
   <script>
   var g = {};
 
@@ -74,6 +89,8 @@
         getFitbitData();
       }
     });
+
+    makeLogoutTappable(); // in initializationCode.js
 
     function getFitbitData() {
       $.ajax({
